--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,6 @@
 <resources>
     <string name="app_name">PokeDex retrofit</string>
     <string name="pesquisa_dex">Nome ou número</string>
+    <string name="pokedex">Pokedex</string>
+    <string name="items">Items</string>
 </resources>
